[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["astmio"]

[project]
name = "astmio"
version = "1.0.0a3"
authors = [
  { name="Prasoon Pratham", email="prathamprasoonyt@gmail.com" },
]
description = "Python implementation of ASTM E1381/1394 protocol."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/PrasoonPratham/astmio"
"Bug Tracker" = "https://github.com/PrasoonPratham/astmio/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "hypothesis"]
hipaa = ["dataset>=1.6.2"]
metrics = ["prometheus-client>=0.17.0"]
prometheus = ["prometheus-client>=0.17.0"]
security = ["cryptography>=41.0.0"]
full = ["dataset>=1.6.2", "prometheus-client>=0.17.0", "cryptography>=41.0.0"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"